Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92571

qmllint: Cannot assign to default property of incompatible type

    XMLWordPrintable

Details

    • 001bec1aa213d47d02efa6a8aed5111aaf67ca7c 1c0e771197fc6d8341737fb4bb8446c1d8988307 (qt/qtdeclarative/wip/qtquickcontrols2)

    Description

      During parsing of code base that woks perfectly fine with QML runtime,
      I got bunch of warnings for objects creation. I can not understand the pattern,
      usually this the first or the second helper object created inside of QML class.

      One of many examples, in form of extra simplified code below. It is simplified to the unusable form,
      but "qml" tool still reports nothing about this code. But "qmllint" report warning:

      qmllint Test8.qml
      Warning: Test8.qml:9:13: Cannot assign to default property of incompatible type
                  Image {
                  ^^^^^
      
      import QtQuick.Controls 2.2
      import QtQuick 2.0
      
      BusyIndicator {
          contentItem: Item {
              Repeater {
                  Image {
                      source: "/usr/share/doc/qt/qtwidgets/images/qformlayout-kde.png"
                  }
              }
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            max.goldstein Maximilian Goldstein
            evgeniy_dushistov evgeniy_dushistov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes