tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -620,6 +620,7 @@ void TestQmllint::cleanQmlCode_data()
     QTest::newRow("var") << QStringLiteral("var.qml");
     QTest::newRow("defaultProperty") << QStringLiteral("defaultProperty.qml");
     QTest::newRow("defaultPropertyList") << QStringLiteral("defaultPropertyList.qml");
+    QTest::newRow("defaultPropertyComponent") << QStringLiteral("defaultPropertyComponent.qml");
     QTest::newRow("duplicateQmldirImport") << QStringLiteral("qmldirImport/duplicate.qml");
     QTest::newRow("Used imports") << QStringLiteral("used.qml");
     QTest::newRow("Unused imports (multi)") << QStringLiteral("unused_multi.qml");
